fix design spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -59,6 +59,7 @@ main {
 
   @media (min-width: 480px) {
     padding-top: $module * 2;
+    padding-bottom: $module * 2;
   }
 }
 
